--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -11,9 +11,9 @@
                 <h4 class="card-title">@employee.empName</h4>
                 <p class="card-text">@employee.empDepartment</p>
                 <div class="card-footer text-center">
-                    <a asp-controller="home" asp-action="detail" asp-route-id="@employee.empID" class="btn btn-primary">View</a>
-                    <a href="#" class="btn btn-primary">Edit</a>
-                    <a href="#" class="btn btn-primary">Delete</a>
+                    <a asp-controller="home" asp-action="detail" asp-route-id="@employee.empID" class="btn btn-primary m-1">View</a>
+                    <a href="#" class="btn btn-primary m-1">Edit</a>
+                    <a href="#" class="btn btn-primary m-1">Delete</a>
 
                 </div>
             </div>
