--- a/WebApplication/Views/shared/_Layout.cshtml
+++ b/WebApplication/Views/shared/_Layout.cshtml
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width" />
     <environment include="Development">
         <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/twitter-bootstrap/js/bootstrap.js"></script>
+
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -15,7 +18,26 @@
 </head>
 <body>
     <div class="container">
-        @RenderBody()
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+</button>
+
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a asp-controller="home" asp-action="index" class="nav-link">Employeelist</a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-controller="home" asp-action="create" class="nav-link">Create</a>
+                    </li>
+
+                </ul>
+            </div>
+        </nav>
+        <div >
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
