Entity Framework migration

--- a/WebApplication/Views/Home/Detail.cshtml
+++ b/WebApplication/Views/Home/Detail.cshtml
@@ -2,7 +2,7 @@
 @model Employee
 
 <div class="card m-3">
-        <img class="card-img-top" src="~/images/jokes.jpg" alt="Card image">
+        <img class="card-img-top" src="~/images/Employee.jpg" alt="Card image">
         <div class="card-body">
             <h4 class="card-title">@Model.Name</h4>
             <p class="card-text">@Model.Department</p>
