--- a/WebApplication/Views/Home/Index.cshtml
+++ b/WebApplication/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
         {
 
         <div class="card m-3">
-            <img class="card-img-top" src="~/images/jokes.jpg" alt="Card image">
+            <img class="card-img-top" src="~/images/Employee.jpg" alt="Card image">
             <div class="card-body">
                 <h4 class="card-title">@employee.Name</h4>
                 <p class="card-text">@employee.Department</p>
