--- a/BlazorServer/Shared/NavMenu.razor
+++ b/BlazorServer/Shared/NavMenu.razor
@@ -39,10 +39,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="calender">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Calender
+            <NavLink class="nav-link" href="/devexpress">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> DevExpress
             </NavLink>
         </li>
+
     </ul>
 </div>
 
