--- a/BlazorServer/Pages/Error.razor
+++ b/BlazorServer/Pages/Error.razor
@@ -2,7 +2,7 @@
 
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An fatal error occurred while processing your request.</h2>
+<h2 class="text-danger">An  error occurred while processing your request.</h2>
 
 <h3>Development Mode</h3>
 <p>
