--- a/BlazorServer/Pages/Index.razor
+++ b/BlazorServer/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
 
-<h1>Hello, world!Prithu</h1>
+<h1>Hello, world!</h1>
 
-Welcome to your new app.
+Welcome Prithu to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
